# zenithgemini

./: Cargo.toml  README.md  database.db
migrations/: 20250228203747_create_users_table.sql  20250302121551_create_message_history_table.sql  20250302123528_create_messages_table.sql
src/: main.rs
src/app/: config.rs
src/bot/: bot_logic.rs  mod.rs
src/db/: database.rs
src/gemini/: models.rs  services.rs
src/models/: message.rs  message_history.rs  mod.rs  user.rs
src/tests/: db_tests.rs  message_history_tests.rs  message_tests.rs  mod.rs  user_tests.rs
src/utils/: string.rs  time.rs
test_migrations/: 20250228203747_create_users_table.sql
