[package]
name = "zenithgemini"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
log = "0.4.26"
pretty_env_logger = "0.5.0"
reqwest = "0.12.12"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sqlx = { version = "0.7.3", features = ["migrate", "runtime-tokio-rustls", "sqlite"] }
teloxide = { version = "^0.13.0", features = ["cache-me", "cbor-serializer", "macros", "serde_cbor", "sqlx", "trace-adaptor"] }
tokio = { version = "1.43.0", features = ["full"] }

[profile.release]
panic = "abort"
